syntax = "proto3";

option csharp_namespace = "PaymentGrpcService";

package payment;

import "google/protobuf/timestamp.proto";

service PaymentServices {
  rpc PaymentDetailsByOrderId (OrderIdRequest) returns (stream PaymentDetailsResponse) {};
}

message OrderIdRequest {
  int32 Id = 1;
}

message PaymentDetailsResponse {
Payment  payment = 1;
}


message Payment {
int32 Id = 1;
int32 OrderId = 2;
double Amount  = 3;
string Date  = 4;
int32 Status = 5;
}
